# ARMv8_TicketSpinlock

./: CMakeLists.txt  LICENSE  README.md  appmain.c  basehw.h  config.h.in  my__main.c  toolchain.armclang  uart.c  uart.h  v8A.scat
asm/: basehw.S  reset.S  vectors.S
spinlock/: spinlock.c  spinlock.h  spinlock_asm.S
